[gd_scene load_steps=6 format=3 uid="uid://dn14ksjaxt3c0"]

[ext_resource type="Script" uid="uid://bx7gjrlqel2pw" path="res://nodes/player/player.gd" id="1_khfle"]
[ext_resource type="Texture2D" uid="uid://c7oxaepmusdrm" path="res://arts/tests.png" id="2_fn53c"]
[ext_resource type="PackedScene" uid="uid://cflojjvvf07hu" path="res://nodes/hud/HUD.tscn" id="3_fn53c"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4raw8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fn53c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_khfle"]
radius = 22.0
height = 80.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 16
collision_mask = 5
motion_mode = 1
script = ExtResource("1_khfle")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.163, 0.163)
sprite_frames = SubResource("SpriteFrames_4raw8")
offset = Vector2(42.9448, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_khfle")

[node name="HUD" parent="." instance=ExtResource("3_fn53c")]

[node name="LeftLeg" type="Marker2D" parent="."]
position = Vector2(4, 7)

[node name="RightLeg" type="Marker2D" parent="."]
position = Vector2(-4, 7)

[node name="LeftArm" type="Marker2D" parent="."]
position = Vector2(7, -18)

[node name="RightArm" type="Marker2D" parent="."]
position = Vector2(-14, -14)

[node name="Body" type="Marker2D" parent="."]
position = Vector2(0, -9)
